2017-02-06  Miguel Gomez  <magomez@igalia.com>

        [GTK][EFL] Release unused UpdateAtlas when in memory pressure situation
        https://bugs.webkit.org/show_bug.cgi?id=167872

        Reviewed by Carlos Garcia Campos.

        In a memory pressure situation, release all the unused UpdateAtlas as soon as possible, instead
        of waiting 3 seconds before releasing them.

        * WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.cpp:
        (WebKit::CompositingCoordinator::releaseInactiveAtlasesTimerFired):
        (WebKit::CompositingCoordinator::releaseAtlases):
        * WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.h:

2017-01-26  Chris Dumez  <cdumez@apple.com>

        Crash when navigating back to a page in PacheCache when one of its frames has been removed
        https://bugs.webkit.org/show_bug.cgi?id=167421
        <rdar://problem/30188490>

        Reviewed by Darin Adler.

        Add a new setting allowing layout tests to enable PageCache in a window
        that has an opener, for convenience.

        * Shared/WebPreferencesDefinitions.h:
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetAllowsPageCacheWithWindowOpener):
        (WKPreferencesGetAllowsPageCacheWithWindowOpener):
        * UIProcess/API/C/WKPreferencesRefPrivate.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):

2017-02-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [Soup] WebKitSoupRequestInputStream can still leave requests unfinished after r211773
        https://bugs.webkit.org/show_bug.cgi?id=167929

        Reviewed by Michael Catanzaro.

        The while loop to process the pending data requests was not a good idea, because having a new pending request
        doesn't mean we have more data available, but that more data was requested.
